# galleria

./: .deepsource.toml  .dockerignore  .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .stylelintrc.json  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  eslint.config.mjs  middleware.ts  mypy.ini  package-lock.json  package.json  pylintrc  pyproject.toml  renovate.json  requirements_cli.txt  requirements_dev.txt  sonar-project.properties  stylelint.config.mjs  tsconfig.json  vercel.json
.github/: FUNDING.yml
.github/workflows/: sonar-analysis.yml  static-analysis.yml
api/: applause.ts  contact.ts  giphy.ts  health.ts
cli/: DEM.md  README.md  SPEC.md
cli/man/: mod_deflate.md
cli/src/: OlympusStackedImage.json  elevation.py  embellish_gpx.py  generate_social.rs  gpx_to_webtrack.py  photos_manager.py  webtrack.py
cli/tests/: test_elevation.py  test_embellish_gpx.py  test_gpx_to_webtrack.py  test_photos_manager.py
config/: humanstxt-webpack-plugin.js  paths.js  snarkdown.js  stories-webpack-plugin.js  utils.js  webpack.analysis.js  webpack.common.js  webpack.dev.js  webpack.prod.js
config/generate-weblabels-webpack-plugin/: AUTHORS  README.md  index.js  jslicenses.ejs  plugin-options-schema.json  spdx-licenses-mapping.js
extra_docs/: webtrack_waypoints.md
photo_manager_cli/: .gitignore  Makefile  README.md  mypy.ini  requirements-dev.txt  requirements.txt  sonar-project.properties
photo_manager_cli/src/: NikonLensID.json  OlympusLensType.json  OlympusStackedImage.json  photos_manager.py
photo_manager_cli/tests/: test_photo_metadata.py  (+1 more)
public/: _headers  _redirects
src/: 404.html  CustomLogging.ts  config.ts  extra-icons.json  index.ts  languages.json  routes.ts  template.html  third-party-connections.json  third-party.json  translate.ts  utils.ts  utils_api.ts  webtrack.ts
src/views/: Map.ts  (+27 more)
webtrack_cli/: DEM.md  Makefile  README.md  SPEC.md  pylintrc  require_dev.txt  requirements.txt  sonar-project.properties
(+981 files in other folders)
