[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^2.1.2"
gpxpy = "^1.6.2"
click = "^8.1.7"
requests = "^2.32.3"
pillow = "^10.4.0"
pyexiftool = "^0.5.6"
python-dotenv = "^1.0.1"
gdal = "==3.8.5.*"

[tool.poetry.group.test.dependencies]
mypy = "^1.11.2"
types-requests = "^2.32.0.20240914"
pytest = "^8.3.3"
coverage = "^7.6.2"
pytest-vcr = "^1.0.2"
pytest-cov = "^5.0.0"
robotframework = "^7.1"
robotframework-seleniumlibrary = "^6.6.1"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["PL", "C90", "I", "F"]
extend-select = ["E501"]
ignore = ["PLR2004"]

[tool.ruff.lint.isort]
force-single-line = true
